<?xml version="1.0" encoding="UTF-8"?><resources><string name="module1158string0">module1158string0</string>
<string name="module1158string1">module1158string1</string>
<string name="module1158string2">module1158string2</string>
<string name="module1158string3">module1158string3</string>
<string name="module1158string4">module1158string4</string>
<string name="module1158string5">module1158string5</string>
<string name="module1158string6">module1158string6</string>
<string name="module1158string7">module1158string7</string>
<string name="module1158string8">module1158string8</string>
<string name="module1158string9">module1158string9</string>
<string name="module1158string10">module1158string10</string>
<string name="module1158string11">module1158string11</string>
<string name="module1158string12">module1158string12</string>
<string name="module1158string13">module1158string13</string>
<string name="module1158string14">module1158string14</string>
<string name="module1158string15">module1158string15</string>
<string name="module1158string16">module1158string16</string>
<string name="module1158string17">module1158string17</string>
<string name="module1158string18">module1158string18</string>
<string name="module1158string19">module1158string19</string>
<string name="module1158string20">module1158string20</string>
<string name="module1158string21">module1158string21</string>
<string name="module1158string22">module1158string22</string>
<string name="module1158string23">module1158string23</string>
<string name="module1158string24">module1158string24</string>
<string name="module1158string25">module1158string25</string>
<string name="module1158string26">module1158string26</string>
<string name="module1158string27">module1158string27</string>
<string name="module1158string28">module1158string28</string>
<string name="module1158string29">module1158string29</string>
<string name="module1158string30">module1158string30</string>
<string name="module1158string31">module1158string31</string>
<string name="module1158string32">module1158string32</string>
<string name="module1158string33">module1158string33</string>
<string name="module1158string34">module1158string34</string>
<string name="module1158string35">module1158string35</string>
<string name="module1158string36">module1158string36</string>
<string name="module1158string37">module1158string37</string>
<string name="module1158string38">module1158string38</string>
<string name="module1158string39">module1158string39</string>
<string name="module1158string40">module1158string40</string>
<string name="module1158string41">module1158string41</string>
<string name="module1158string42">module1158string42</string>
<string name="module1158string43">module1158string43</string>
<string name="module1158string44">module1158string44</string>
<string name="module1158string45">module1158string45</string>
<string name="module1158string46">module1158string46</string>
<string name="module1158string47">module1158string47</string>
<string name="module1158string48">module1158string48</string>
<string name="module1158string49">module1158string49</string>
<string name="module1158string50">module1158string50</string>
<string name="module1158string51">module1158string51</string>
<string name="module1158string52">module1158string52</string>
<string name="module1158string53">module1158string53</string>
<string name="module1158string54">module1158string54</string>
<string name="module1158string55">module1158string55</string>
<string name="module1158string56">module1158string56</string>
<string name="module1158string57">module1158string57</string>
<string name="module1158string58">module1158string58</string>
<string name="module1158string59">module1158string59</string>
<string name="module1158string60">module1158string60</string>
<string name="module1158string61">module1158string61</string>
<string name="module1158string62">module1158string62</string>
<string name="module1158string63">module1158string63</string>
<string name="module1158string64">module1158string64</string>
<string name="module1158string65">module1158string65</string>
<string name="module1158string66">module1158string66</string>
<string name="module1158string67">module1158string67</string>
<string name="module1158string68">module1158string68</string>
<string name="module1158string69">module1158string69</string>
<string name="module1158string70">module1158string70</string>
</resources>